2007-04-06 Romain
* Remove source_project from Sale Invoice Transaction base categories, as erp5_project is not dependant from erp5_accounting.

2007-02-07 rafael
* Removed Roles from Task Report

2007-01-30 rafael
* Added back default task line support
* Added more fields in BaseTrade Project
* Started to use more proxy fields in Task and Task Report

2006-10-30 rafael
* Improved Navegability betwen Project and other Objects.

2006-10-19 rafael
* Added Sale Order Milestone.

2006-10-17 rafael
* Added new skin folder for integration with Sales.

2006-07-09 rafael
* Modified Task and Task Report Workflow
* Modified Forms
* Included task_invoice_builder

2006-07-09
* Updated by JPS with more reports

2006-06-22 Jerome
* Add missing TaskOrder propertysheet.
* improve Task_view

2006-06-15 Thomas
* Added form to display PlanningBox within a project tab.

2006-05-18 Fabien
* Sync with JPS' branch

2006-02-06 Kevin
* Update license and copyright metadata.

2005-11-11 Romain
* Correct naming convention.

2005-09-24 JPS
* Renamed modules
* Removed service module (it should be part of another template)